--- a/Source/Xamarin/Prism.Autofac.Forms/Prism.Autofac.Forms.csproj
+++ b/Source/Xamarin/Prism.Autofac.Forms/Prism.Autofac.Forms.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="AutofacExtensions.cs" />
     <Compile Include="Immutable\AutofacContainer.cs" />
+    <Compile Include="Immutable\IAutofacContainer.cs" />
     <Compile Include="IPlatformInitializer.cs" />
     <Compile Include="Modularity\AutofacModuleInitializer.cs" />
     <Compile Include="Navigation\AutofacPageNavigationService.cs" />
