--- a/Source/Xamarin/Prism.Autofac.Forms/Prism.Autofac.Forms.csproj
+++ b/Source/Xamarin/Prism.Autofac.Forms/Prism.Autofac.Forms.csproj
@@ -48,6 +48,8 @@
     <Compile Include="AutofacExtensions.cs" />
     <Compile Include="Immutable\AutofacContainer.cs" />
     <Compile Include="Immutable\IAutofacContainer.cs" />
+    <Compile Include="Immutable\IPreRegisterTypes.cs" />
+    <Compile Include="Immutable\RuntimeComponentRegistry.cs" />
     <Compile Include="IPlatformInitializer.cs" />
     <Compile Include="Modularity\AutofacModuleInitializer.cs" />
     <Compile Include="Navigation\AutofacPageNavigationService.cs" />
