--- a/Source/Windows10/Prism.Autofac.Windows/Prism.Autofac.Windows.csproj
+++ b/Source/Windows10/Prism.Autofac.Windows/Prism.Autofac.Windows.csproj
@@ -110,6 +110,9 @@
     <Compile Include="..\..\Wpf\Prism.Autofac.Wpf\AutofacServiceLocatorAdapter.cs">
       <Link>AutofacServiceLocatorAdapter.cs</Link>
     </Compile>
+    <Compile Include="Immutable\AutofacContainer.cs" />
+    <Compile Include="Immutable\IAutofacContainer.cs" />
+    <Compile Include="Immutable\RuntimeComponentRegistry.cs" />
     <Compile Include="PrismAutofacApplication.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Prism.Autofac.Windows.rd.xml" />
@@ -124,6 +127,7 @@
       <Name>Prism.Windows</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
